<resources>
    <string name="app_name">TastifyMobile</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_account">Log in account</string>
    <string name="enter">Enter</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="number">Phone number</string>
    <string name="to_register">Do not have an account? Register here</string>
    <string name="profile">Profile</string>
    <string name="bookings">Bookings</string>
    <string name="menu">Menu</string>
    <string name="email">Email</string>
    <string name="bonus">Bonus</string>
    <string name="save">Save</string>
    <string name="get_coupon">Get coupon</string>
    <string name="login_no_info">Login and password are required</string>
    <string name="registration_success">Registration successful!</string>
    <string name="registration_no_info">All fields are required</string>
    <string name="received_coupon">Received coupon</string>
    <string name="discount">You have discount:</string>
    <string name="grn">grn.</string>
    <string name="no_bonus">No bonus available</string>
    <string name="size">Size</string>
    <string name="price">Price</string>
    <string name="info">Info</string>
    <string name="type">Type</string>
    <string name="table_number">Table number</string>
    <string name="persons_count">Persons count</string>
    <string name="select_date">Select date</string>
    <string name="select_time">Select time</string>
    <string name="comment">Comment</string>
    <string name="add_booking">Add booking</string>
    <string name="update_booking">Update booking</string>
    <string name="booking_updated">Booking updated</string>
    <string name="booking_deleted">Booking deleted</string>
</resources>