<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/persons_count" />

    <EditText
        android:id="@+id/editTextPersonsCount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/persons_count"
        android:inputType="number" />

    <EditText
        android:id="@+id/editTextBookingDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/select_date"
        android:focusable="false"
        android:clickable="true"/>

    <EditText
        android:id="@+id/editTextBookingTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/select_time"
        android:focusable="false"
        android:clickable="true"/>

    <EditText
        android:id="@+id/editTextComment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/comment" />

    <Button
        android:id="@+id/btnUpdateBooking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_booking"
        android:layout_gravity="center"
        android:backgroundTint="@color/light_orange"/>
</LinearLayout>
