<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tastify_bg_profile"
    tools:context=".activities.ProfileActivity">

    <ImageButton
        android:id="@+id/exit_btn"
        android:src="@drawable/icon_exit"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/transparent"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"/>

    <TextView
        android:id="@+id/loginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="18sp"
        android:padding="10dp"
        android:layout_marginTop="150dp" />

    <EditText
        android:id="@+id/loginEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter login"
        android:textSize="18sp"
        android:padding="10dp"
        android:layout_below="@id/loginTextView"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="18sp"
        android:padding="10dp"
        android:layout_below="@id/loginEditText"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter name"
        android:textSize="18sp"
        android:padding="10dp"
        android:layout_below="@id/nameTextView"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="18sp"
        android:padding="10dp"
        android:layout_below="@id/nameEditText"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter email"
        android:textSize="18sp"
        android:padding="10dp"
        android:layout_below="@id/emailTextView"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/phoneTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number"
        android:padding="10dp"
        android:textSize="18sp"
        android:layout_below="@id/emailEditText"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/phoneEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter phone"
        android:textSize="18sp"
        android:padding="10dp"
        android:layout_below="@id/phoneTextView"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/bonusText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bonus"
        android:textSize="18sp"
        android:padding="10dp"
        android:layout_below="@id/phoneEditText"
        android:layout_marginTop="8dp"
        android:layout_alignParentLeft="true"/>

    <TextView
        android:id="@+id/bonusTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:padding="10dp"
        android:layout_marginLeft="100dp"
        android:layout_below="@id/phoneEditText"
        android:layout_marginTop="8dp"
        android:layout_alignParentRight="true"/>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_below="@id/bonusTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:padding="16dp"
        android:layout_alignParentRight="true"
        android:backgroundTint="@color/green"/>

    <Button
        android:id="@+id/getCouponButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_coupon"
        android:layout_below="@id/bonusTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:padding="16dp"
        android:layout_alignParentLeft="true"
        android:backgroundTint="@color/green"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        style="@style/Menu"
        app:itemIconTint="@color/black"
        app:menu="@menu/bottom_menu"
        />

</RelativeLayout>
